--- a/mytest/src/log4j.properties
+++ b/mytest/src/log4j.properties
@@ -1,7 +1,23 @@
-#设置根目录的级别，输出地
-log4j.rootLogger =Error,systemOut
+#指定包 类logger.Testng.NewTestng  logger为类中定义的log后跟bao,lei
+log4j.logger.Testng.NewTestng=INFO,NewTestng
+#设置根目录的级别，输出地,可以有多个输出地，隔开可以写类名，输出对应类的日志
+log4j.rootLogger =INFO,systemOut
+
 #输出到控制台 
 log4j.appender.systemOut = org.apache.log4j.ConsoleAppender 
+#输出到文件
+log4j.appender.NewTestng = org.apache.log4j.FileAppender
+
+ 
+#输出格式为html
+log4j.appender.NewTestng.layout = org.apache.log4j.HTMLLayout
+#输出位置
+log4j.appender.NewTestng.File = F:/TianYuan/SE+javaProject/mytest/result/loging.html
+#输出java文件名称和行号
+log4j.appender.NewTestng.layout.LocationInfo = true
+#报告名
+log4j.appender.NewTestng.layout.Title = testng。log
+#33333333333
 #输出格式自由
 log4j.appender.systemOut.layout = org.apache.log4j.PatternLayout 
 #输出的样式
